app/assets/stylesheets/pages/issues.scss
@import "./issues/issue_count_badge";
@import "./issues/related_issues";

.issues-list {
  .issue {
    padding: 10px 0 10px $gl-padding;
    position: relative;

    .title {
      margin-bottom: 2px;
    }

    .issue-labels {
      display: inline-block;
    }

    .icon-merge-request-unmerged {
      height: 13px;
      margin-bottom: 3px;
     }
  }
}

.issue-realtime-pre-pulse {
  opacity: 0;
}

.issue-realtime-trigger-pulse {
  transition: opacity $fade-in-duration linear;
  opacity: 1;
}

.check-all-holder {
  line-height: 36px;
  float: left;
  margin-right: 15px;
}

.issues_content {
  .title {
    height: 40px;
  }

  form {
    margin: 0;
  }
}

form.edit-issue {
  margin: 0;
}

ul.related-merge-requests > li {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;

  .merge-request-id {
    flex-shrink: 0;
  }

  .merge-request-info {
    margin-left: 5px;
  }

  .row_title {
    vertical-align: bottom;
  }

  gl-emoji {
    font-size: 1em;
  }
}

.merge-requests-title,
.related-branches-title {
  font-size: 16px;
  font-weight: 600;
}

.merge-request-id {
  display: inline-block;
}

.merge-request-status {
  font-size: 13px;
  padding: 0 5px;
  color: $white-light;
  height: 20px;
  border-radius: 3px;
  line-height: 18px;

  &.merged {
    background: $blue-500;
  }

  &.closed {
    background: $red-500;
  }

  &.open {
    background: $green-500;
  }
}

.merge-request,
.issue {
  &.today {
    background: $issues-today-bg;
    border-color: $issues-today-border;
  }

  &.closed {
    background: $gray-light;
    border-color: $border-color;
  }

  &.merged {
    background: $gray-light;
    border-color: $border-color;
  }
}

.merge-request-ci-status,
.related-merge-requests {
  .ci-status-link {
    display: block;
    margin-right: 5px;
  }

  svg {
    display: block;
  }
}

@media (max-width: $screen-xs-max) {
  .issue-btn-group {
    width: 100%;

    .btn {
      width: 100%;
    }
  }
}

.issue-form .select2-container {
  width: 250px !important;
}

.issues-footer {
  padding-top: $gl-padding;
  padding-bottom: 37px;
}

.issues-export-modal {
  .export-svg-container {
    height: 56px;
    padding: 10px 10px 0;
  }

  svg {
    height: 100%;
  }

  .export-checkmark {
    color: $green-400;
  }
}

.issue-email-modal-btn {
  padding: 0;
  color: $gl-link-color;
  background-color: transparent;
  border: 0;
  outline: 0;

  &:hover {
    text-decoration: underline;
  }
}

.email-modal-input-group {
  margin-bottom: 10px;

  .form-control {
    background-color: $white-light;
  }

  .btn {
    background-color: $gray-light;
    border: 1px solid $border-gray-normal;
  }
}

.recaptcha {
  margin-bottom: 30px;
}

.new-branch-col {
  padding-top: 10px;
}

.create-mr-dropdown-wrap {
  .btn-group:not(.hide) {
    display: flex;
  }

  .js-create-merge-request {
    flex-grow: 1;
    flex-shrink: 0;
  }

  .dropdown-menu {
    width: 300px;
    opacity: 1;
    visibility: visible;
    transform: translateY(0);
    display: none;
  }

  .dropdown-toggle {
    .fa-caret-down {
      pointer-events: none;
      color: inherit;
      margin-left: 0;
    }
  }

  li:not(.divider) {
    padding: 6px;
    cursor: pointer;

    &:hover,
    &:focus {
      background-color: $dropdown-hover-color;
      color: $white-light;
    }

    &.droplab-item-selected {
      .icon-container {
        i {
          visibility: visible;
        }
      }
    }

    .icon-container {
      float: left;
      padding-left: 6px;

      i {
        visibility: hidden;
      }
    }

    .description {
      padding-left: 30px;
      font-size: 13px;

      strong {
        display: block;
        font-weight: 600;
      }
    }
  }
}

@media (min-width: $screen-sm-min) {
  .new-branch-col {
    padding-top: 0;
    text-align: right;
  }

  .create-mr-dropdown-wrap {
    .btn-group:not(.hide) {
      display: inline-block;
    }
  }
}


.issue-token {
  display: inline-flex;
  align-items: stretch;
  max-width: 100%;
  line-height: 1.75;
  white-space: nowrap;
}

.issue-token-link {
  display: inline-flex;
  min-width: 0;

  &:hover,
  &:focus {
    outline: none;
    text-decoration: none;
  }
}

.issue-token-reference {
  display: flex;
  align-items: baseline;
  margin-right: 1px;
  padding-left: 0.5em;
  padding-right: 0.5em;
  background-color: $gray-lighter;
  transition: background $general-hover-transition-duration $general-hover-transition-curve, color $general-hover-transition-duration $general-hover-transition-curve;

  .issue-token-error & {
    background-color: $red-50;
  }

  .issue-token:hover &,
  .issue-token-link:focus > & {
    background-color: issue-token-reference-hover-background-color;
    color: $gl-link-hover-color;
    text-decoration: none;
  }

  .issue-token-error:hover &,
  .issue-token-link:focus > & {
    background-color: $red-75;
  }
}

@mixin issue-token-state-icon {
  margin-right: 0.35em;
  font-size: 0.9em;
}

.issue-token-state-icon-open {
  @include issue-token-state-icon;
  color: $green-600;
}

.issue-token-state-icon-closed {
  @include issue-token-state-icon;
  color: $red-600;
}

.issue-token-title {
  overflow: hidden;
  display: flex;
  align-items: baseline;
  padding-left: 0.5em;
  padding-right: 0.5em;
  background-color: $gray-normal;
  color: $gl-text-color-secondary;
  transition: background $general-hover-transition-duration $general-hover-transition-curve;

  .issue-token-error & {
    background-color: $red-75;
  }

  .issue-token:hover &,
  .issue-token-link:focus > & {
    background-color: $border-gray-normal;
  }

  .issue-token-error:hover &,
  .issue-token-link:focus > & {
    background-color: $red-100;
  }

  & > .fa {
    line-height: inherit;
  }
}

.issue-token-title-text {
  text-overflow: ellipsis;
  overflow: hidden;
}

.issue-token-remove-button {
  padding: 0 0.5em 0 0;
  background-color: $gray-normal;
  border: 0;
  color: $gl-text-color-secondary;
  transition: background $general-hover-transition-duration $general-hover-transition-curve;

  .issue-token-error & {
    background-color: $red-75;
  }

  .issue-token:hover &,
  .issue-token-link:focus + & {
    background-color: $border-gray-normal;
  }

  .issue-token-error:hover &,
  .issue-token-link:focus > & {
    background-color: $red-100;
  }

  & > .fa {
    font-size: 0.9em;
  }
}

// When there isn't a title
.issue-token-remove-button-standalone {
  padding-left: 0.5em;
}

